PP-13333_parity_checker_checks_exemption_data_new - Fixed HistoricalEventEmitterServiceTest